# OpenEnv

./: .coverage  .dockerignore  .flake8  .pylintrc  DEPLOY.md  Dockerfile  README.md  baseline_results.json  inference.py  inference_results.json  openenv.yaml  openenv_validation_report.json  pyproject.toml  requirements.txt  sample.py
baseline/: __init__.py  run_baseline.py
pharmatrials_env/: __init__.py  env.py  models.py  openenv_cli.py  state.py
pharmatrials_env.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pharmatrials_env/api/: server.py
pharmatrials_env/documents/: generator.py
pharmatrials_env/documents/templates/: __init__.py  ae_narrative.j2  icf.j2  protocol.j2  sap.j2
pharmatrials_env/documents/vocabulary/: meddra_terms.json  nci_thesaurus.json  regulatory_phrases.json
pharmatrials_env/graders/: __init__.py  base.py  consistency_grader.py  icf_grader.py  reconciliation_grader.py
pharmatrials_env/reward/: __init__.py  reward_engine.py
pharmatrials_env/tasks/: __init__.py  easy.py  hard.py  medium.py  registry.py
server/: app.py
tests/: conftest.py  test_api.py  test_baseline.py  test_env.py  test_graders.py  test_models.py  test_openenv_cli.py  test_openenv_contract.py  test_reward.py
